# gobject-tutorial

docs/: sec2.html  sec3.html  sec4.html  sec5.html  sec6.html  sec7.html  sec8.html  sec9.html
latex/: abstract.tex  main.aux  main.tex  main.toc  sec1.tex  sec2.tex  sec3.tex  sec4.tex  sec5.tex  sec6.tex  sec7.tex  sec8.tex  sec9.tex
src/misc/: example1.c  example2.c  example3.c  example4.c  example5.c  meson.build  toupper1.c  toupper2.c  typename.c
src/tcomparable/: meson.build
src/tcomparable/with_macro/: main.c  meson.build  tcomparable.c  tcomparable.h  tdouble.c  tint.c  tstr.c
src/tcomparable/without_macro/: main_without_macro.c  meson.build  tcomparable_without_macro.c  tcomparable_without_macro.h  tdouble_without_macro.c  tint_without_macro.c  tstr_without_macro.c
src/tdouble1/: main.c  meson.build  tdouble.c  tdouble.h
src/tdouble2/: main.c  tdouble.c  tdouble.h
src/tdouble3/: main.c  tdouble.c  tdouble.h
src/tdouble4/: main.c  tdouble.c
src/tdouble5/: main.c  tdouble.c  tdouble.h
src/tdouble6/: main.c  meson.build  tdouble.c  tdouble.h
src/tint/: meson.build  tint.c
src/tnumber/: main.c  meson.build  tdouble.c  tdouble.h  tint.c  tint.h  tnumber.c  tnumber.h
src/tstr/: main.c  meson.build  test1.c  test2.c  tnumstr.c  tnumstr.h  tstr.c  tstr.h
